--- a/2020-10-20.Rmd
+++ b/2020-10-20.Rmd
@@ -84,4 +84,180 @@ pgTime3
 tpeTime_iso8601 <- format_ISO8601(tpeTime, usetz=T)
 tpeTime_iso8601
 ```
+```{r}
+library(lubridate)
+
+# Date/Time class
+purchasingTime <- 
+  ymd_hms("2020-03-31T13:40:55Z")
+
+# character
+location <- "一芳"
+item <- "水果茶"
+# numeric
+quantity <- 2
+
+mingsPurchase <-
+  list(
+    purchasingTime, 
+    location, 
+    quantity, 
+    item
+  )
+print(mingsPurchase)
+```
+```{r}
+a <- c(1,2,3)
+print(a)
+```
+
+```{r}
+mingsPurchase2 <-
+  list(
+    time = purchasingTime,
+    'location' = location,
+    "quantity" = quantity,
+    `item name` = item
+  )
+print(mingsPurchase2)
+```
+```{r}
+heights = c(
+  mary=162,
+  john=177,
+  steve=180
+)
+print(heights)
+```
+```{r}
+exampleList <- 
+  list(
+    4,
+    "Mary",
+    TRUE
+  )
+print(exampleList)
+```
+```{r}
+example2 <- list(
+    list(2,3),
+    list(6,"Pat")
+  )
+#維持兩個元素，元素中才在包含其他子元素
+print(example2)
+```
+```{r}
+example2c <- c(
+  c(2,5),
+  c(4,6)
+)
+#如同c(2,5,4,6)，呈現四個元素的型態
+print(example2c)
+```
+
+```{r}
+# 「**2杯**」「**水果茶**」
+item1 <- list(
+  quantity=2,
+  `item name`="水果茶"
+)
+# 「**1杯**」「**日月紅茶**」
+item2 <- list(
+  quantity=1,
+  `item name`="日月紅茶"
+)
+
+mingsPurchase3 <-
+  list(
+    time = purchasingTime,
+    location = location, #左邊是命名右邊是我要的值
+    items=list(
+      item1,
+      item2
+    )
+  )
+
+print(mingsPurchase3)
+```
+
+```{r}
+student1 <-
+  list(
+    name = character(),
+    id = character(),
+    gmail = character(),
+    googleClassroom =
+      list(
+        displayName = character()
+      ),
+    github =
+      list(
+        username = character(),
+        repoUrl = character()
+      ),
+    homeworks = list(),
+    exams = list(),
+    list()
+  )
+
+names(student1) # 每個元素名稱
+length(student1) # 元素個數
+```
+
+```{r}
+str(student1, 1) # 第一層基本元素架構
+```
+
+```{r}
+str(student1, 2) # 第一層基本元素架構
+```
+
+```{r}
+hw1 <- list(
+  date=ymd("2020-10-21"),
+  grade=10
+)
+exam1 <- list(
+  date=ymd("2020-10-28"),
+  grade=50
+)
+student1 <-
+  list(
+    name = "Martin",
+    id = "007",
+    gmail = "mt@gm.ntpu.edu.tw",
+    googleClassroom =
+      list(
+        displayName = "MT L"
+      ),
+    github =
+      list(
+        username = "tpemartin",
+        repoUrl = "https://github.com/tpemartin/109-1-inclass-practice"
+      ),
+    homeworks = list(
+      hw1
+    ),
+    exams = list(
+      exam1
+    ),
+    list()
+  )
+
+str(student1, 2)
+```
+
+```{r}
+categoryTemplate = 
+  list(
+    categoryName=character(),
+    items = list(
+    )
+  )
+```
+
+```{r}
+library(jsonlite) # 不少同學這行會有Error，還記得如何排除嗎？
+toJSON(mingsPurchase3)
+```
 
