--- a/2020-11-04.Rmd
+++ b/2020-11-04.Rmd
@@ -15,11 +15,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 America_Vote <- list(
+  takesall = "270",
+  list(
   time = ymd_hm("2020-11-04 14:46"),
   trump = "213",
-  biden = "224",
-  takesall = "270"
-)
+  biden = "224"))
 ```
 
 
